# KoolCraftLauncher

./: .editorconfig  .gitattributes  .gitignore  LICENSE  components.d.ts  index.html  package.json  pnpm-lock.yaml  sync-config.cjs  tsconfig.json  typed-router.d.ts  uno.config.ts  vite.config.ts
.github/workflows/: dev-build.yml
src/: App.vue  app.scss  index.css  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: context.rs  lib.rs  main.rs  setup.rs  vibrancy.rs
src-tauri/src/account/: Cargo.toml  microsoft.rs
src-tauri/src/command/: Cargo.toml  account.rs  install.rs  lib.rs  mod.rs  task_manager.rs  window.rs
src-tauri/src/download/: asset_index_schema.rs  manager_utils.rs  mod.rs  utils.rs  vanilla.rs  version_schema.rs
src-tauri/src/download/rux/: download_manager.rs  download_task.rs  mod.rs  store.rs
src-tauri/src/install/: Cargo.toml  asset_index_json_schema.rs  general.rs  lib.rs  mod.rs  utils.rs  version_json_schema.rs
src-tauri/src/install/manager/: download_task.rs  mod.rs  task_group.rs  task_manager.rs
src-tauri/src/task_manager/: Cargo.toml  download_task.rs  lib.rs  mod.rs  task.rs  task_group.rs  task_manager.rs  task_section.rs
src-tauri/src/utils/: Cargo.toml  lib.rs
src-tauri/src/utils/install/: mod.rs  utils.rs  version_json_schema.rs
src-tauri/src/utils/install/manager/: download_task.rs  mod.rs  task.rs  task_manager.rs  task_section.rs
src-tauri/src/utils/network/: client.rs
src-tauri/src/utils/window/: mod.rs  setup_window.rs  vibrancy.rs
src-tauri/src/window/: setup_window.rs  vibrancy.rs
src/components/: AccountAvatar.vue  GameVersionCard.vue  Icon.vue  Intersection.vue  MultiProgress.vue  SkinViewer.vue
src/components/once/: MemoryBar.vue  ThemeChangeButton.vue  WindowControlButtons.vue
src/components/page/: Page.vue  ScrollablePage.vue
src/components/ui/button/: index.ts
src/data/account/: account.ts
src/data/account/providers/: OfflineAccountProvider.ts
src/data/cache/: minecraft-version-cache.ts  models.ts
src/data/game/: minecraft-dir-store.ts  minecraft-game-store.ts
src/data/install/: install.ts  models.ts
src/data/theme/: models.ts
src/i18n/: zh-CN.json
src/lib/: index-skin-viewer-config.ts  indexSkinViewerConfig.ts  router.ts  utils.ts
src/locales/: zh-cn.json5
src/pages/: [...path].vue  index.vue
src/pages/account/: list.vue
src/pages/account/add/: index.vue  microsoft.vue  offline.vue
src/pages/discover/: game.vue  index.vue
src/pages/discover/game/: index.vue  install.[version].vue
src/pages/game/: index.vue
src/pages/install/: index.vue
src/pages/version/: index.vue
src/plugins/: i18n.ts  pinia.ts  router.ts  vuetify.ts
src/settings/theme/: models.ts  theme.ts
src/store/: mixed-store.ts  tauri-store.ts
src/store/account/: account.ts  models.ts
src/store/account/providers/: AccountProvider.ts  MicrosoftAccountProvider.ts  OfflineAccountProvider.ts
src/store/cache/: minecraft-version-cache.ts
src/store/download/: download.ts  models.ts
src/store/game/: minecraft-dir-store.ts  minecraft-game-store.ts  models.ts
src/store/theme/: theme.ts
src/utils/: date-utils.ts  date.ts  install.ts  offline.ts  size.ts
