[package]
name = "kool-craft-launcher"
version = "0.1.0"
description = "A Cool Minecraft Launcher"
authors = ["MC_XiaoHei"]
license-file = "LICENSE"
edition = "2021"
default-run = "kool-craft-launcher"

[lib]
name = "kcl"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
log = "0.4"
tokio = "1.43"
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.5"
zip = "2.2"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
chrono = { version = "0.4", features = ["serde"] }
sys-locale = "0.3"
uuid = { version = "1.13", features = ["v7", "fast-rng"] }
serde = "1.0"
serde_json = "1.0"
tauri = { version = "2.2", features = ["macos-private-api", "unstable"] }
tauri-plugin-os = "2.2"
tauri-plugin-log = "2.2"
tauri-plugin-http = { version = "2.3", features = ["json", "stream"] }
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2"
tauri-plugin-prevent-default = "1.0"

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
window-vibrancy = "0.5"

[build-dependencies]
tauri-build = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
