[package]
name = "account"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
sys-locale = "0.3"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-store = { workspace = true }