[package]
name = "install"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }

task_manager = { workspace = true }