[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
uuid = { version = "1.13", features = ["v7", "fast-rng"] }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tauri-plugin-http = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
lazy_static = { workspace = true }